--- a/asn1_start.ipynb
+++ b/asn1_start.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.tree import plot_tree\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "##Seaborn for fancy plots. \n",
@@ -40,7 +34,17 @@
     "<li>Please use some pipeline in prepping the data. The test data is in an identical format to the training data, so whatever pipeline you've created for your training will work for the testing. \n",
     "<li>The accuracy scoring will be an average of accuracy and roc_auc. \n",
     "<li>Please make the name variable into your name, this will make it easier for me to track scores. \n",
-    "</ul>"
+    "</ul>\n",
+    "\n",
+    "### Grading Metrics\n",
+    "<ul>\n",
+    "<li><b>Pipeline Used - 10pts</b> The data loading needs to be in a pipeline. See the test part for illustration. When testing I'll call your pipe with the new data (format is identical to training), so any prep stuff should be in the pipeline. \n",
+    "<li><b>Tree Based Model Used - 5pts</b> The model used for classification needs to be some variety of tree. \n",
+    "<li><b>Accuracy - 5pts</b> The final accuracy acheived. \n",
+    "<li><b>Clarity and Formatting - 5pts</b> Is it organized and can I read it?\n",
+    "</ul>\n",
+    "\n",
+    "For submission, please drop the .ipynb in the dropbox. Again, please make sure everything you need is in that file. "
    ]
   },
   {
@@ -326,7 +330,7 @@
     "\n",
     "Please leave the stuff below as-is in your file. \n",
     "\n",
-    "This will take your best model and score it with the test data. "
+    "This will take your best model and score it with the test data. If you want to test to make sure that yours works, make a copy of the data file and rename it testing.csv, then make sure this runs ok. I will do the same, but the contents of my test file will be different. "
    ]
   },
   {
