--- a/asn1_start.ipynb
+++ b/asn1_start.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "##Seaborn for fancy plots. \n",
     "import matplotlib.pyplot as plt\n",
@@ -346,14 +347,14 @@
     "test_y = np.array(test_df[\"target\"]).reshape(-1,1)\n",
     "test_X = np.array(test_df.drop(columns={\"target\"}))\n",
     "\n",
-    "roc_scores = cross_val_score(best, test_X, test_y.ravel(), cv=5, scoring='roc_auc')\n",
-    "acc_scores = cross_val_score(best, test_X, test_y.ravel(), cv=5)\n",
+    "preds = best.predict(test_X)\n",
     "\n",
-    "mean_roc = np.mean(roc_scores)\n",
-    "mean_acc = np.mean(acc_scores)\n",
-    "print(mean_roc)\n",
-    "print(mean_acc)\n",
-    "print(name, np.mean([mean_roc, mean_acc]))\n"
+    "roc_score = roc_auc_score(test_y, preds)\n",
+    "acc_score = accuracy_score(test_y, preds)\n",
+    "\n",
+    "print(roc_score)\n",
+    "print(acc_score)\n",
+    "print(name, np.mean([roc_score, acc_score]))\n"
    ]
   }
  ],
